docs/getting-started/nginx/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        nginx:
          stableIngress: rollouts-demo-stable
          additionalIngressAnnotations:
            canary-by-header: X-Canary
            canary-by-header-value: let-me-in
            server-snippet: |
              access_by_lua_block {
                local ipu = require("iputils")
                --
                -- ThousandEyes VPN CIDRs
                --
                local vpn_subnets = ipu.parse_cidrs({
                  "10.0.234.144/32"     -- for example only
                })

                req_from_vpn = ipu.ip_in_cidrs(ngx.var.remote_addr, vpn_subnets)
                if req_from_vpn then
                  ngx.header.["X-Canary"] = "let-me-in"
                end
              }
      steps:
      - setWeight: 50
      - pause: {}
      - setWeight: 90
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
